<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="433dp"
        android:layout_height="430dp"
        android:background="@drawable/board"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/todo4"
            android:onClick="dropIn"
            android:tag="0"
            app:layout_column="0"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/todo3"
            android:onClick="dropIn"
            android:tag="1"
            app:layout_column="1"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/todo1"
            android:onClick="dropIn"
            android:tag="2"
            app:layout_column="1"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/todo"
            android:onClick="dropIn"
            android:tag="3"
            app:layout_column="2"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/todo5"
            android:onClick="dropIn"
            android:tag="4"
            app:layout_column="1"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/todo9"
            android:onClick="dropIn"
            android:tag="5"
            app:layout_column="2"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/todo10"
            android:onClick="dropIn"
            android:tag="6"
            app:layout_column="2"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/todo10"
            android:onClick="dropIn"
            android:tag="7"
            app:layout_column="0"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/todo10"
            android:onClick="dropIn"
            android:tag="8"
            app:layout_column="0"
            app:layout_row="2" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/winnerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginLeft="173dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="181dp"
        android:layout_marginRight="181dp"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginLeft="157dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="166dp"
        android:layout_marginRight="166dp"
        android:background="@color/colorAccent"
        android:onClick="playAgain"
        android:text="@string/play_again"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winnerTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>